--- a/index.html
+++ b/index.html
@@ -19782,7 +19782,7 @@
 																					</div>
 																					<div
 																						class="eut-element eut-align-center">
-																						<a href="https://goo.gl/maps/Tc9xKZXPA5WYjhva7"
+																						<a href="https://www.google.com/maps/place/Shpytkivska+School/@50.4153726,30.1232123,17z/data=!3m1!4b1!4m6!3m5!1s0x472b4a08a3258a4d:0x72e7a6c3979107c3!8m2!3d50.4153726!4d30.125401!16s%2Fg%2F1pp2x6htt"
 																							class="eut-btn eut-btn-medium eut-shadow-medium eut-round eut-bg-primary-5 eut-bg-hover-purple"><span>Переглянути
 																								на Google
 																								Maps</span></a>
